Add dropdown menus for most common searches - Add css to make clearer

--- a/app/views/index/home.html.erb
+++ b/app/views/index/home.html.erb
@@ -3,9 +3,31 @@
 
   <p>To see the current and past values of imports/exports of a certain class, please enter the series ID of your query.  If you don't know it, please consult <%= link_to("this table", "http://download.bls.gov/pub/time.series/ei/ei.series") %> for your series ID and <%= link_to("this table", "http://download.bls.gov/pub/time.series/ei/ei.index") %> for the index codes.</p>
 
-  <%= form_tag api_query_path, id: "query-form" do %>
-    <%= label_tag(:series_id, "Series ID:") %>
+  <%= form_tag api_query_path, :class => "query-form" do %>
+    <%= label_tag(:series_id, "Series ID:", :class => "label") %>
     <%= text_field_tag(:series_id) %>
+    <%= submit_tag("Submit") %>
+  <% end %>
+
+  <p>Or you can choose from the most common searches:</p>
+
+<!-- Must move into partial and pass these values in from server -->
+
+  <%= form_tag api_query_path, :class => "query-form" do %>
+    <%= label_tag(:series_id, "Imports:", :class => "label") %>
+    <%= select_tag(:series_id, options_for_select([["All Commodities", "EIUIR"],["Petroleum and Petroleum Products", "EIUIR100"],["All Imports Excluding Petroleum","EIUIREXPET"],["All Imports Excluding Fuels","EIUIREXFUELS"]])) %>
+    <%= submit_tag("Submit") %>
+  <% end %>
+
+  <%= form_tag api_query_path, :class => "query-form" do %>
+    <%= label_tag(:series_id, "Exports:", :class => "label") %>
+    <%= select_tag(:series_id, options_for_select([["All Commodities", "EIUIQ"],["Agricultural Commodities", "EIUIQAG"],["Nonagricultural Commodities","EIUIQEXAG"]])) %>
+    <%= submit_tag("Submit") %>
+  <% end %>
+
+  <%= form_tag api_query_path, :class => "query-form" do %>
+    <%= label_tag(:series_id, "Locality of Origin - All Commodities:", :class => "label") %>
+    <%= select_tag(:series_id, options_for_select([["Industrialized Countries", "EIUCOINDUSTOT"],["Other Countries", "EIUCOOTHERTOT"],["Canada","EIUCOCANTOT"],['European Union','EIUCOEECTOT'],['France','EIUCOFRNTOT'],['Germany','EIUCOGERTOT'],['United Kingdom','EIUCOUKTOT'],['Latin America','EIUCOLATTOT'],['Mexico','EIUCOMEXTOT'],['Pacific Rim','EIUCOPRIMTOT'],['China','EIUCOCHNTOT'],['Japan','EIUCOJPNTOT'],[' Asian Newly Industrialized Countries','EIUCOOASTOT'],['Association of Southeast Asian Nations','EIUCOASEANTOT'],['Asia Near East Countries','EIUCOASNRETOT']])) %>
     <%= submit_tag("Submit") %>
   <% end %>
 </center>
